{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 50,
  "lineage": "6e2a449b-42b3-d1af-a91b-750a2eba79db",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07bee82ddd97631a4",
            "arn": "arn:aws:ec2:ca-central-1:082982103746:instance/i-0f900cc6387cc0cbe",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f900cc6387cc0cbe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fedora-panama-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-034a011e9f3fc48ba",
            "private_dns": "ip-172-31-3-195.ca-central-1.compute.internal",
            "private_ip": "172.31.3.195",
            "public_ip": "35.183.210.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c0e2d7bc221c04b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f1c64ae886fe4c8",
            "tags": {
              "Environtment": "demo",
              "Name": "demo-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environtment": "demo",
              "Name": "demo-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "demo-instance"
            },
            "vpc_security_group_ids": [
              "sg-0d7eeaa0913316ebc"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-013476d3629654b6e",
            "domain": "vpc",
            "id": "eipalloc-02782845b8a476745",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0a39e0327d9c35982",
            "private_dns": "ip-172-31-3-164.ca-central-1.compute.internal",
            "private_ip": "172.31.3.164",
            "public_dns": "ec2-3-99-98-73.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.99.98.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-ca-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-ca-central-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08e87815f2fbaf8d8",
            "domain": "vpc",
            "id": "eipalloc-04dea8e929ee9327d",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-029da7b4230167b88",
            "private_dns": "ip-172-31-4-144.ca-central-1.compute.internal",
            "private_ip": "172.31.4.144",
            "public_dns": "ec2-3-98-227-2.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.98.227.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-ca-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-ca-central-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:internet-gateway/igw-001b837e89120db53",
            "id": "igw-001b837e89120db53",
            "owner_id": "082982103746",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06329671f15d586c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02782845b8a476745",
            "connectivity_type": "public",
            "id": "nat-09dba5b4e57e8cb55",
            "network_interface_id": "eni-0a39e0327d9c35982",
            "private_ip": "172.31.3.164",
            "public_ip": "3.99.98.73",
            "subnet_id": "subnet-07f1c64ae886fe4c8",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-ca-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-ca-central-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04dea8e929ee9327d",
            "connectivity_type": "public",
            "id": "nat-08ddaa1a8d43bfbeb",
            "network_interface_id": "eni-029da7b4230167b88",
            "private_ip": "172.31.4.144",
            "public_ip": "3.98.227.2",
            "subnet_id": "subnet-001a231f24d9e7cc7",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-ca-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-ca-central-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08019bd533d679fbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09dba5b4e57e8cb55",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08019bd533d679fbd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0826513040b0021881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08ddaa1a8d43bfbeb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0826513040b002188",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-001b837e89120db53",
            "id": "r-rtb-00b06ceb8620d46411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b06ceb8620d4641",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:route-table/rtb-08019bd533d679fbd",
            "id": "rtb-08019bd533d679fbd",
            "owner_id": "082982103746",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09dba5b4e57e8cb55",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-private-ca-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-private-ca-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06329671f15d586c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:route-table/rtb-0826513040b002188",
            "id": "rtb-0826513040b002188",
            "owner_id": "082982103746",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ddaa1a8d43bfbeb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-private-ca-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-private-ca-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06329671f15d586c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:route-table/rtb-00b06ceb8620d4641",
            "id": "rtb-00b06ceb8620d4641",
            "owner_id": "082982103746",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001b837e89120db53",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06329671f15d586c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0c9655f555cc95a",
            "route_table_id": "rtb-08019bd533d679fbd",
            "subnet_id": "subnet-0a8bc2bd279fc59f3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1eef45547fe18fe",
            "route_table_id": "rtb-0826513040b002188",
            "subnet_id": "subnet-0734dae4e477b1d9e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a877a88965b95b4",
            "route_table_id": "rtb-00b06ceb8620d4641",
            "subnet_id": "subnet-07f1c64ae886fe4c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cf4f0da16b5154f",
            "route_table_id": "rtb-00b06ceb8620d4641",
            "subnet_id": "subnet-001a231f24d9e7cc7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:subnet/subnet-0a8bc2bd279fc59f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-0a8bc2bd279fc59f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082982103746",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-private-ca-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-private-ca-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06329671f15d586c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:subnet/subnet-0734dae4e477b1d9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.31.2.0/24",
            "id": "subnet-0734dae4e477b1d9e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082982103746",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-private-ca-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-private-ca-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06329671f15d586c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:subnet/subnet-07f1c64ae886fe4c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.31.3.0/24",
            "id": "subnet-07f1c64ae886fe4c8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "082982103746",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-public-ca-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-public-ca-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06329671f15d586c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:subnet/subnet-001a231f24d9e7cc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.31.4.0/24",
            "id": "subnet-001a231f24d9e7cc7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "082982103746",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-public-ca-central-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc-public-ca-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06329671f15d586c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:vpc/vpc-06329671f15d586c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0882ad78817eada60",
            "default_route_table_id": "rtb-09b1f3063748127fb",
            "default_security_group_id": "sg-0d181677982f91283",
            "dhcp_options_id": "dopt-0fefd967",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06329671f15d586c8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b1f3063748127fb",
            "owner_id": "082982103746",
            "tags": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "fedora-panama-day-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:082982103746:security-group/sg-0d7eeaa0913316ebc",
            "description": "Security group demo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7eeaa0913316ebc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "web-server-sg-20210925063804483800000001",
            "name_prefix": "web-server-sg-",
            "owner_id": "082982103746",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "tags_all": {
              "Name": "web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06329671f15d586c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2832721295",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d7eeaa0913316ebc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2917831588",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7eeaa0913316ebc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-3434529414",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d7eeaa0913316ebc",
            "self": true,
            "source_security_group_id": "sg-0d7eeaa0913316ebc",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}